# Q4_Sol_Krishh

./: README.md  package.json
amm/: Anchor.toml
amm/programs/amm/: Cargo.toml
amm/programs/amm/src/: lib.rs
escrow/: Anchor.toml
escrow/programs/escrow/: Cargo.toml
escrow/programs/escrow/src/: error.rs  lib.rs  states.rs
nft-marketplace/: Anchor.toml
nft-marketplace/programs/nft-marketplace/: Cargo.toml
nft-marketplace/programs/nft-marketplace/src/: errors.rs  lib.rs
nft-staking/: Anchor.toml
nft-staking/programs/nft-staking/: Cargo.toml
nft-staking/programs/nft-staking/src/: errors.rs  (+1 more)
solana-vuln-game/: Anchor.toml  README.md  package-lock.json
solana-vuln-game/programs/solana-vuln-game/: Cargo.toml
solana-vuln-game/programs/solana-vuln-game/src/: lib.rs
solana-vuln-game/programs/solana-vuln-game/src/instructions/: mod.rs
solana-vuln-game/programs/solana-vuln-game/src/instructions/game_instructions/: init_config.rs  init_user.rs  mod.rs
solana-vuln-game/programs/solana-vuln-game/src/instructions/vuln_instructions/: create_user.rs  mod.rs  transfer_points.rs
solana-vuln-game/programs/solana-vuln-game/src/states/: mod.rs
solana-vuln-game/programs/solana-vuln-game/src/states/game_state/: config.rs  mod.rs  user_state.rs
solana-vuln-game/programs/solana-vuln-game/src/states/vul_state/: user.rs
solana-vuln-game/programs/solana-vuln-game/src/validation_function/: mod.rs  validate_input.rs
solana-vuln-game/tests/: solana-vuln-game.ts
ts/: package-lock.json  package.json
ts/cluster1/: nft_image.ts  nft_metadata.ts  nft_mint.ts
(+35 files in other folders)
